[package]
name = "test"
version = "0.1.0"
edition = "2018"
# resolver = "2"

[dependencies]
show-image = { version = "0.9.3", features = ["image"] }
# show-image = { path = "/Users/david/Programming/rand/show-image-rs", features = ["image"] }
image = { version = "0.23.14" }
rand = { version = "0.8.4" }
ndarray = "0.15.3"
