[package]
name = "minisift"
version = "0.1.0"
edition = "2018"
# resolver = "2"

[dependencies]
show-image = { version = "0.9.3", features = ["image"] }
# show-image = { path = "/Users/david/Programming/rand/show-image-rs", features = ["image"] }
image = { version = "0.23.14" }
rand = { version = "0.8.4" }
ndarray = "0.15.3"
opencv = { version = "0.92.0", default-features = false, features = [
  "calib3d",
] }
itertools = "0.10.1"
statrs = "0.15.0"
colorsys = "0.6.5"
nalgebra = "0.29.0"
