[package]
name = "minisift"
version = "0.1.0"
edition = "2018"
# resolver = "2"

[dependencies]
show-image = { version = "0.14.0", features = ["image"] }
# show-image = { path = "/Users/david/Programming/rand/show-image-rs", features = ["image"] }
image = { version = "0.25.1" }
rand = { version = "0.8.5" }
ndarray = "0.15.6"
opencv = { version = "0.92.0", default-features = false, features = [
  "calib3d",
] }
itertools = "0.13.0"
statrs = "0.17.1"
colorsys = "0.6.7"
nalgebra = "0.32.6"
